# FULiveDemoDroid-Native

./: README.md  build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/faceunity/fulivenativedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: android_util.c  android_util.h  authpack.h  faceunity_renderer.c  faceunity_renderer.h  fu_native_jni.cpp  gl_utils.c  gl_utils.h
app/src/main/cpp/include/: CNamaSDK.h  android_native_interface.h
app/src/main/java/com/faceunity/fulivenativedemo/: AspectFrameLayout.java  CameraUtils.java  EffectAndFilterItemView.java  EffectAndFilterSelectAdapter.java  EffectEnum.java  FUApplication.java  FURenderer.java  FaceunityControlView.java  FilterEnum.java  FuNativeJni.java  GlUtil.java  LifeCycleSensorManager.java  LimitFpsUtil.java  MainActivity.java  PermissionUtils.java  SplashActivity.java  StickerEnum.java
app/src/main/jni/: Android.mk  FURenderer_interface.c  GlUtils.c  GlUtils.h  android_native_interface.h  android_util.c  android_util.h  faceunity_renderer.c  faceunity_renderer.h
app/src/main/res/layout/: activity_main.xml  faceunity_view.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/faceunity/fulivenativedemo/: ExampleUnitTest.java
docs/sample/: fuai_interface_sample.cc
faceunity/: build.gradle
faceunity/src/main/res/layout/: layout_beauty_control.xml
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
